--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,14 +36,6 @@ textarea, .CodeMirror {
 	font-family: 'Roboto Mono', monospace;
 }
 
-label {
-	font-family: monospace;
-	display: block;
-	font-weight: bold;
-	font-size: 15pt;
-	text-transform: uppercase;
-}
-
 button:not([disabled]):hover {
 	transform: translateY(-1px);
 }
@@ -167,4 +159,16 @@ main.open {
 	border-right-width: 3px;
 	overflow: hidden;
 	width: 70vw;
+}
+
+.editor-toolbar {
+	padding: 5px;
+	display: flex;
+	flex-direction: row;
+	border: 0 solid;
+	border-bottom-width: 3px;
+}
+
+.editor-toolbar * + * {
+	margin-left: 5px;
 }
