--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ body.swal2-height-auto {
 	text-transform: uppercase;
 	border: 0 solid;
 	border-bottom-width: 3px;
+	word-spacing: -20px;
 }
 
 textarea, .CodeMirror {
@@ -143,6 +144,10 @@ main.open {
 	padding: 10px;
 }
 
+.book-entry.open {
+	background: rgba(0, 0, 0, 0.1);
+}
+
 .book-entry:hover {
 	background: rgba(0, 0, 0, 0.2);
 	cursor: pointer;
@@ -158,7 +163,6 @@ main.open {
 	border: 0 solid;
 	border-right-width: 3px;
 	overflow: hidden;
-	width: 70vw;
 }
 
 .editor-toolbar {
@@ -171,4 +175,53 @@ main.open {
 
 .editor-toolbar * + * {
 	margin-left: 5px;
+}
+
+.github-corner {
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.github-corner:hover .octo-arm {
+	animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+	0%, 100% {
+		transform: rotate(0)
+	}
+	20%, 60% {
+		transform: rotate(-25deg)
+	}
+	40%, 80% {
+		transform: rotate(10deg)
+	}
+}
+
+@media (max-width: 500px) {
+	.github-corner:hover .octo-arm {
+		animation: none
+	}
+
+	.github-corner .octo-arm {
+		animation: octocat-wave 560ms ease-in-out
+	}
+}
+
+.editor-container {
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	height: 100%;
+	width: 100%;
+}
+
+pre.exception {
+	overflow: auto;
+	text-align: left;
+	border: 2px solid;
+	padding: 5px;
+	background: rgba(0, 0, 0, 0.1);
+	border-radius: 2px;
 }
